@@ -99,7 +99,7 @@ F77=$(BINPREF)gfortran$(GCC4_SUFF) $(M_ARCH)
 FLIBS=-lgfortran -lquadmath
 LINKER=$(MAIN_LD)
 MAIN_LD=$(CC)
-MAKEINFO = $(TEXI2ANY)
+## MAKEINFO = $(TEXI2ANY)
 MKDIR=mkdir
 NM=$(BINPREF)nm
 RANLIB=$(BINPREF)ranlib
